--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#skills">Skills</a>
                     </li>
                 </ul>
             </div>
@@ -187,58 +187,97 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
+    <!-- Skills Section -->
+    <section id="skills">
         <div class="container">
-            <div class="row">
+           <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>&#60;&#47;contact&#62;</h2>
+                    <h2>&#60;&#47;skills&#62;</h2>
                     <hr class="star-primary">
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-                    <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
-                                <p class="help-block text-danger"></p>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/html5.png">
+                                <h4>HTML5</h4>
                             </div>
                         </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <div class="row control-group">
-                            <div class="form-group col-xs-12 floating-label-form-group controls">
-                                <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                        <br>
-                        <div id="success"></div>
-                        <div class="row">
-                            <div class="form-group col-xs-12">
-                                <button type="submit" class="btn btn-primary btn-lg">Send</button>
-                            </div>
-                        </div>
-                    </form>
+                    </div>
                 </div>
-            </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/ruby.png">
+                                <h4>Ruby</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/js.png">
+                                <h4>Javascript</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/ai.png">
+                                <h4>Illustrator</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
+           <div class="row">
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/css3.png">
+                                <h4>CSS3</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/rails.png">
+                                <h4>Rails</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/jquery.png">
+                                <h4>jQuery</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="skill-item">
+                        <div class="skill-content">
+                            <div class="skill-border">
+                                <img class="skill-icon" src="img/skills/bootstrap.png">
+                                <h4>Bootstrap</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
         </div>
     </section>
 
@@ -545,10 +584,6 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/freelancer.js"></script>
