adjusted home page look

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#contact">Contact</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -79,7 +82,7 @@
                     <div class="intro-text">
                         <span class="name">Hello, world! My name is Brett.</span>
                         <hr class="star-light">
-                        <span class="skills">UX Designer & Front End Developer</span>
+                        <span class="role">UX Designer & Front End Developer</span>
                     </div>
                 </div>
             </div>
@@ -282,16 +285,17 @@
     </section>
 
     <!-- Footer -->
+    <section class="success" id="contact">
     <footer class="text-center">
         <div class="footer-above">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h4>Location:</h4>
-                        <p>Seattle, Washington<br>98105</p>
+                        <h4>Contact:</h4>
+                        <p>brett.yamada@gmail.com<br>Seattle, WA 98105</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h4>The Social Stuff:</h4>
+                        <h4>Some Social Stuff:</h4>
                         <ul class="list-inline">
                             <li>
                                 <a href="https://www.facebook.com/brettyiyam" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
@@ -317,13 +321,14 @@
         <div class="footer-below">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12">
-                        brett.yamada@gmail.com &#149; made with HTML5, CSS3, jQuery, Boostrap, blood, sweat, tears, and lots of energy drinks
+                    <div class="col-lg-12" style="font-size:13px">
+                        made with HTML5, CSS3, jQuery, Boostrap, blood, sweat, tears, and lots of energy drinks
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    </section>
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-top page-scroll visible-xs visble-sm">
